--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix"></script>
+  <script src="./body-pix-patched.js"></script>
   <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 
