--- a/index.html
+++ b/index.html
@@ -12,21 +12,28 @@
     <section class="parameters">
       <form>
         <label for="internalResolution">Internal Resolution Scale</label>
-        <input type="number" id="internalResolution" name="internalResolution" min="0.25" max="1.0" step="0.25"
+        <input type="number" id="internalResolution" name="internalResolution" min="0.25" max="1" step="0.25"
           value="0.5" oninput="this.form.internalResolutionRange.value=this.value" />
         <input type="range" name="internalResolutionRange" min="0.25" max="1" step="0.25" value="0.5"
           oninput="this.form.internalResolution.value=this.value" />
       </form>
       <form>
         <label for="segmentationThreshold">Segmentation Threshold</label>
-        <input type="number" id="segmentationThreshold" name="segmentationThreshold" min="0.0" max="1.0" step="0.01"
+        <input type="number" id="segmentationThreshold" name="segmentationThreshold" min="0.0" max="1" step="0.01"
           value="0.7" oninput="this.form.segmentationThresholdRange.value=this.value" />
         <input type="range" name="segmentationThresholdRange" min="0" max="1" step="0.01" value="0.7"
           oninput="this.form.segmentationThreshold.value=this.value" />
       </form>
       <form>
+        <label for="poseThreshold">Pose Threshold</label>
+        <input type="number" id="poseThreshold" name="poseThreshold" min="0.0" max="1" step="0.01"
+          value="0" oninput="this.form.poseThresholdRange.value=this.value" />
+        <input type="range" name="poseThresholdRange" min="0" max="1" step="0.01" value="0"
+          oninput="this.form.poseThreshold.value=this.value" />
+      </form>
+      <form>
         <label for="poseKeypointThreshold">Pose Keypoint Threshold</label>
-        <input type="number" id="poseKeypointThreshold" name="poseKeypointThreshold" min="0.0" max="1.0" step="0.01"
+        <input type="number" id="poseKeypointThreshold" name="poseKeypointThreshold" min="0.0" max="1" step="0.01"
           value="0.1" oninput="this.form.poseKeypointThresholdRange.value=this.value" />
         <input type="range" name="poseKeypointThresholdRange" min="0" max="1" step="0.01" value="0.1"
           oninput="this.form.poseKeypointThreshold.value=this.value" />
@@ -84,10 +91,12 @@
         canvas.height = 0;
         const internalResolutionInput = document.getElementById("internalResolution");
         const segmentationThresholdInput = document.getElementById("segmentationThreshold");
+        const poseThresholdInput = document.getElementById("poseThreshold");
         const poseKeypointThresholdInput = document.getElementById("poseKeypointThreshold");
         loadAndPredict(imageToProcess, canvas, {
           internalResolution: parseFloat(internalResolutionInput.value),
           segmentationThreshold: parseFloat(segmentationThresholdInput.value),
+          poseThreshold: parseFloat(poseThresholdInput.value),
           poseKeypointThreshold: parseFloat(poseKeypointThresholdInput.value)
         }).then(() => {
           URL.revokeObjectURL(imageToProcess.src);
